--- a/app/assets/stylesheets/mobile/word.css.sass
+++ b/app/assets/stylesheets/mobile/word.css.sass
@@ -26,6 +26,7 @@ body
 		font-size: 14px
 		padding: 8px
 		border: 1px solid #1d1d1d
+		position: relative
 		@include transition(.2s)
 	.good
 		background: rgba(0,0,0,0.25)
@@ -39,3 +40,12 @@ body
 		border-left: 5px solid #C1FF7D
 	.f_3
 		border-left: 5px solid #EA8072
+#reset
+	text-align: center
+	span.reset_btn
+		padding: 5px
+		display: block
+		background: rgba(0,0,0,0.25)
+		@include glass
+		@include text-shadow-field
+		@include round(8px)
